...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lUF-hA-QQz">
                                <rect key="frame" x="12" y="611" width="44" height="44"/>
                                <accessibility key="accessibilityConfiguration" label="ExperienceGravity"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="44" id="Wu6-dh-F0N"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gRG-9S-haf">
                                <rect key="frame" x="315" y="611" width="44" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="Settings" label="Settings"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="F5S-hj-4wk"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Simulate gravity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="awC-j3-Bcy">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Gravity mode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Kev-8Y-Nfj">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                                    <segments>
                                                        <segment title="Earth"/>
                                                        <segment title="Moon"/>
                                                    </segments>
                                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Distance units" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="VG3-sm-kgL">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Show dwarf planets" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SHN-7b-XdK">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Visible radius (au)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Iq2-Y5-Fd5">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                                    <rect key="frame" x="115.5" y="5.5" width="144" height="33"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <state key="normal" title="Share with a friend">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
...
                                                    <rect key="frame" x="149.5" y="5.5" width="76" height="33"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <state key="normal" title="Feedback">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
...
                    </view>
                    <navigationItem key="navigationItem" title="Feedback" id="ZSh-fy-yIm">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="Zwe-oM-aLw">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Send" style="done" id="Vzp-L2-nwk">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
...
                                <rect key="frame" x="20" y="28" width="25" height="22"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" image="ListIcon"/>
                                <connections>
                                    <segue destination="7ne-r9-sle" kind="presentation" id="zYF-To-OtR"/>
...
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" image="OrbitalViewIcon"/>
                                <connections>
                                    <action selector="showSolarSystemButtonPressed:" destination="Qlf-ef-AUO" eventType="touchUpInside" id="4eC-Ih-mfv"/>
...
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" image="PlanetDetailsIcon"/>
