...
                                <segments>
                                    <segment image="SidebarIconLeft" width="32"/>
                                </segments>
                            </segmentedCell>
                        </segmentedControl>
                    </toolbarItem>
                    <toolbarItem implicitItemIdentifier="4A5B6A63-BF2F-4B10-A5BF-C9793CAAA64D" label="Share" paletteLabel="Share" sizingBehavior="auto" id="ltJ-eY-yss">
                        <nil key="toolTip"/>
                        <segmentedControl key="view" verticalHuggingPriority="750" id="IwC-sT-cH1">
                            <rect key="frame" x="0.0" y="14" width="38" height="24"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                            <segmentedCell key="cell" borderStyle="border" alignment="left" style="texturedSquare" trackingMode="selectOne" id="4F0-vD-7mS">
                                <font key="font" metaFont="system"/>
...
